syntax="proto3";

service Raft {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
  rpc ServeClient (ServeClientRequest) returns (ServeClientResponse) {}
}

message RequestVoteRequest {
  string candidateId = 1;
  int32 term = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
}

message LogEntry {
  string command = 1;
  int32 term = 2;
}

message AppendEntriesRequest {
  string leaderId = 1;
  int32 term = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  int32 leaderCommit = 5;
  repeated LogEntry entries = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
  int32 ack = 3;
}

message ServeClientRequest {
  string request = 1;
}

message ServeClientResponse {
  string data = 1;
  string leaderId = 2;
  bool success = 3;
}
